--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
     --secondary: #8c38ff;
     --dark: #131a26;
     --light: #eee;
+    --warning: #ffcc00;
 }
 
 *{
@@ -26,7 +27,7 @@ body{
 
 .calculator{
     width: 100%;
-    max-width: 400px;
+    max-width: 450px;
     background-color: #FFF;
     border-radius: 16px;
     overflow: hidden;
@@ -78,4 +79,10 @@ button:hover{
 
 .digits button{
     background-color: var(--dark);
+}
+
+.warning{
+    font-size: 16px;
+    font-weight: 600;
+    color: var(--warning);
 }
